<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">

    <TextView
        android:id="@+id/tv_frm_PropRentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_Date" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropNote"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_frm_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_Bedroom" />

    <TextView
        android:id="@+id/tv_frm_PropAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_frm_Bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_bedroom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropType" />

    <TextView
        android:id="@+id/tv_frm_Reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_reporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_FurType" />

    <TextView
        android:id="@+id/tv_frm_FurType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/fur_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropRentPrice" />

    <TextView
        android:id="@+id/tv_frm_PropType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropAdd" />

    <TextView
        android:id="@+id/tv_frm_PropNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_Reporter" />

    <TextView
        android:id="@+id/tv_frm_PropName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/prop_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_frm_PropName4"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_frm_PropName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_PropName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_PropName"
        app:layout_constraintStart_toEndOf="@+id/tv_frm_PropName"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_PropName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_PropAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_PropAdd"
        app:layout_constraintStart_toStartOf="@+id/tv_PropName"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_PropAdd"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_PropType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_PropType"
        app:layout_constraintStart_toStartOf="@+id/tv_PropAdd"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_PropType"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_Bedroom"
        app:layout_constraintStart_toStartOf="@+id/tv_PropType"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_Bedroom"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_Date"
        app:layout_constraintStart_toStartOf="@+id/tv_Bedroom"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_Date"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_RentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_PropRentPrice"
        app:layout_constraintStart_toStartOf="@+id/tv_Date"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_PropRentPrice"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_FurType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_FurType"
        app:layout_constraintStart_toStartOf="@+id/tv_RentPrice"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_FurType"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_Reporter"
        app:layout_constraintStart_toStartOf="@+id/tv_FurType"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_Reporter"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_frm_PropNote"
        app:layout_constraintStart_toStartOf="@+id/tv_Reporter"
        app:layout_constraintTop_toTopOf="@+id/tv_frm_PropNote"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>